--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/icon.ico">
-    <link rel="stylesheet" href="css/style.css">    
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <title>Notes App</title>
 </head>
 
@@ -21,7 +22,7 @@
                 <p class="coords">39°57'20.8"N 32°42'31.4"E</p>
                 <div class="ellipse-container">
                     <h2 class="greeting">explore</h2>
-                    <a href="#content-section">Start</a>
+                    <a class="content-click" href="#content-section">Start</a>
                     <div class="ellipse ellipse__outer--thin">
                         <div class="ellipse ellipse__orbit"></div>
                     </div>
@@ -31,8 +32,23 @@
         </div>
     </div>
     <section class="content" id="content-section">
-        
+        <h2 class="notes-header">Notes</h2>
+        <div class="note-card">
+            <div class="note-card-header">
+                <span id="note-date">Sunday 05 April, 2015 at 3:38PM</span>
+                <div class="buttons">
+                    <a><i class="fas fa-edit" style="color:yellow;"></i></a>
+                    <a><i class="fas fa-trash-alt" style="color:red;"></i></a>
+                </div>                
+            </div>
+            <div class="note-card-content">
+                
+            </div>
+        </div>        
     </section>
 </body>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="js/all.min.js"></script>
 
 </html>
