--- a/index.html
+++ b/index.html
@@ -39,16 +39,47 @@
                 <div class="buttons">
                     <a><i class="fas fa-edit" style="color:yellow;"></i></a>
                     <a><i class="fas fa-trash-alt" style="color:red;"></i></a>
-                </div>                
+                </div>
             </div>
             <div class="note-card-content">
-                
+                <textarea id="1" class="note-textarea autoExpand" placeholder="Write here ...">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dapibus viverra massa eu semper. Nam scelerisque at dui in aliquam. Pellentesque pharetra varius odio, in tincidunt purus bibendum ac. Quisque nibh magna, consequat eu magna id, feugiat aliquet quam. Sed lectus ex, semper at enim ac, auctor sollicitudin lacus. Etiam egestas lectus ultrices, hendrerit justo vel, molestie lacus. Curabitur suscipit nunc at iaculis dignissim. Sed tincidunt mauris velit, a tempor lacus sollicitudin non. Vestibulum ut turpis at eros tincidunt feugiat in vel arcu. Mauris posuere euismod mauris, a iaculis dui cursus volutpat. Curabitur odio diam, bibendum aliquam bibendum eget, lobortis nec justo.
+                </textarea>            
             </div>
-        </div>        
+        </div>
+        <div class="note-card">
+            <div class="note-card-header">
+                <span id="note-date">Sunday 05 April, 2015 at 3:38PM</span>
+                <div class="buttons">
+                    <a><i class="fas fa-edit" style="color:yellow;"></i></a>
+                    <a><i class="fas fa-trash-alt" style="color:red;"></i></a>
+                </div>
+            </div>
+            <div class="note-card-content">
+                <textarea id="2" class="note-textarea autoExpand" placeholder="Write here ...">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. varius odio, in tincidunt purus bibendum ac. Quisque nibh magna, consequat eu magna id, feugiat aliquet quam. Sed lectus ex, semper at enim ac, auctor sollicitudin lacus. Etiam egestas lectus ultrices, hendrerit justo vel, molestie lacus. Curabitur suscipit nunc at iaculis dignissim. Sed tincidunt mauris velit, a tempor lacus sollicitudin non. Vestibulum ut turpis at eros tincidunt feugiat in vel arcu. Mauris posuere euismod mauris, a iaculis dui cursus volutpat. Curabitur odio diam, bibendum aliquam bibendum eget, lobortis nec justo.
+                </textarea>            
+            </div>
+        </div>
+        <div class="note-card">
+            <div class="note-card-header">
+                <span id="note-date">Sunday 05 April, 2015 at 3:38PM</span>
+                <div class="buttons">
+                    <a><i class="fas fa-edit" style="color:yellow;"></i></a>
+                    <a><i class="fas fa-trash-alt" style="color:red;"></i></a>
+                </div>
+            </div>
+            <div class="note-card-content">
+                <textarea id="3" class="note-textarea autoExpand" placeholder="Write here ...">
+Lorem ipsibendum ac. Qudunt mauris velit, a tempor lacus sollicitudin non. Vestibulum ut turpis at eros tincidunt feugiat in vel arcu. Mauris posuere euismod mauris, a iaculis dui cursus volutpat. Curabitur odio diam, bibendum aliquam bibendum eget, lobortis nec justo.
+                </textarea>            
+            </div>
+        </div>
     </section>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="js/all.min.js"></script>
+<script src="js/notes-app.js"></script>
 
 </html>
