localStorage add and delete scripts completed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <section class="content" id="content-section">
-        <h2 class="notes-header">Notes <i onclick="AddNote()"
+        <h2 class="notes-header">Notes <i onclick="AddNote(null)"
                 style="font-size: 24px;color:green;position:relative;left: 50px;cursor: pointer;"
                 class="fas fa-plus-square"></i></h2>
         <!-- Card Start-->
