--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
         <h2 class="notes-header">Notes <i onclick="AddNote(null)"
                 style="font-size: 24px;color:green;position:relative;left: 50px;cursor: pointer;"
                 class="fas fa-plus-square"></i></h2>
-        <!-- Card Start-->
+        <section class="card-container">
+            <!-- Card Start-->
 
-        <!-- Card End-->
+            <!-- Card End-->
+        </section>
     </section>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
